--- a/hs_script_resource/templates/pages/scriptresource.html
+++ b/hs_script_resource/templates/pages/scriptresource.html
@@ -8,7 +8,7 @@
     {% if extended_metadata_exists %}
         <div class="row">
             <div class="col-md-12">
-                {% if rsmetadata %}
+                {% if script_metadata %}
                     {########################}
                     {#   SCRIPT  METADATA  #}
                     {########################}
@@ -17,29 +17,29 @@
                         <tbody>
                             <tr>
                                 <th class="text-muted">Programming Language </th>
-                                <td>{{ rsmetadata.scriptLanguage }}</td>
+                                <td>{{ script_metadata.scriptLanguage }}</td>
                             </tr>
                             <tr>
                                 <th class="text-muted">Programming Language Version </th>
-                                <td>{{ rsmetadata.languageVersion }}</td>
+                                <td>{{ script_metadata.languageVersion }}</td>
                             </tr>
                             <tr>
                                 <th class="text-muted">Script Version </th>
-                                <td>{{ rsmetadata.scriptVersion }}</td>
+                                <td>{{ script_metadata.scriptVersion }}</td>
                             </tr>
                             <tr>
                                 <th class="text-muted">Script Dependencies </th>
-                                <td>{{ rsmetadata.scriptDependencies }}</td>
+                                <td>{{ script_metadata.scriptDependencies }}</td>
                             </tr>
                             <tr>
                                 <th class="text-muted">Release Date </th>
-                                <td>{{ rsmetadata.scriptReleaseDate |date:"SHORT_DATE_FORMAT" }}</td>
+                                <td>{{ script_metadata.scriptReleaseDate |date:"SHORT_DATE_FORMAT" }}</td>
                             </tr>
                             <tr>
                                 <th class="text-muted">Script Repository </th>
                                 <td>
-                                    <a target="_blank" href="{{ rsmetadata.scriptCodeRepository }}">
-                                        {{ rsmetadata.scriptCodeRepository }}
+                                    <a target="_blank" href="{{ script_metadata.scriptCodeRepository }}">
+                                        {{ script_metadata.scriptCodeRepository }}
                                     </a>
                                 </td>
                             </tr>
@@ -54,5 +54,5 @@
 
 {% block extra_js %}
     {{ block.super }}
-    <script src="{% static "js/rscript.js"%}"></script>
+    <script src="{% static "js/script.js" %}"></script>
 {% endblock %}
