Rough implementation of the Collection Resource Type

--- a/hs_core/templates/pages/create-resource.html
+++ b/hs_core/templates/pages/create-resource.html
@@ -58,6 +58,7 @@
                 <option value="ToolResource">Web App</option>
 {#                <option value="InstResource">RHESSys Instance Resource</option> #}
                 <option value="GeographicFeatureResource">Geographic Feature (ESRI Shapefiles)</option>
+                <option value="CollectionResource">Collection Resource</option>
 
             </select>
         </div>
