--- a/theme/templates/pages/homepage.html
+++ b/theme/templates/pages/homepage.html
@@ -108,7 +108,6 @@
         </div>
     </div>
 
-
     <div class="screen-sizes">
         <div class="container">
             <div class="row">
@@ -139,6 +138,7 @@
     </div>
 
     <script>
+    // Fade nav bar background when scroll is at the top
     function fadeNav() {
         var offset = getScrollXY();
         if (offset[1] > 0) {
@@ -174,6 +174,11 @@
     $(document).ready(function () {
         window.onscroll = fadeNav;
         fadeNav();
+
+        // Prevents dropdown form getting dismissed when clicking on items inside
+        $('.dropdown-menu').click(function (e) {
+            e.stopPropagation();
+        });
     });
 </script>
 
