--- a/hs_collection_resource/templates/pages/collectionresource.html
+++ b/hs_collection_resource/templates/pages/collectionresource.html
@@ -15,32 +15,14 @@
         <div class="row">
             <div class="col-md-12">
                 <div>
-                    {% if url_base %}
-                        <h4><strong>URL Base:</strong></h4>
+                    {% if collection_items %}
+                        <h4><strong>Collection Items:</strong></h4>
                         <hr style="margin-top: 0px;margin-bottom: 2px">
                         <div class="row">
-                            <div class="col-sm-4"><strong>App URL:</strong></div>
-                            <div class="col-sm-8"><a href='{{ url_base.value }}'>{{ url_base.value }}</a></div>
-                        </div>
-                        <hr style="border:0">
-                    {%  endif %}
-                </div>
-                <div>
-                    {% if version %}
-                        <h4><strong>Version:</strong></h4>
-                        <hr style="margin-top: 0px;margin-bottom: 2px">
-                        <div class="row">
-                            <div class="col-sm-4"><strong>Version:</strong></div>
-                            <div class="col-sm-8">{{ version.value }}</div>
-                        </div>
-                    {% endif %}
-                </div>
-                <div>
-                    {% if supported_res_types %}
-                        <h4><strong>Supported Resource Types:</strong></h4>
-                        <hr style="margin-top: 0px;margin-bottom: 2px">
-                        <div class="row">
-                            <div class="col-sm-8">{{ supported_res_types }}</div>
+                        {% autoescape off %}
+                            <div class="col-sm-8">{{ collection_items }}</div>
+                        {% endautoescape %}
+
                         </div>
                     {% endif %}
                 </div>
