Added img preview option when changing icon metadata

--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -1589,10 +1589,8 @@
                                 {% for tool in relevant_tools %}
                                     <div style="display:inline-block; padding-left:20px; text-align:center;">
                                         <h4>{{ tool.title }}</h4>
-                                        <img src="{{ tool.icon }}" style="width:100px; height:100px;"
-                                             onerror="this.src = '{{ STATIC_URL }}img/web-app-default-icon.png';"/>
-                                        <br>
-                                        <a href="{{ tool.url }}" target="_blank"><button class="btn btn-primary">Launch App</button></a>
+                                        <a href="{{ tool.url }}" target="_blank"><img src="{{ tool.icon }}" style="width:100px; height:100px;"
+                                             onerror="this.src = '{{ STATIC_URL }}img/web-app-default-icon.png';"/></a>
                                     </div>
                                 {% endfor %}
                             {% else %}
