--- a/hs_tools_resource/templates/pages/toolresource.html
+++ b/hs_tools_resource/templates/pages/toolresource.html
@@ -71,6 +71,16 @@
                 var checked_res_item=checked_res_array[i];
                 $("input[value='"+checked_res_item+"']").attr("checked","true");
             }
+            var get_icon_input_element = function(){
+                return $('#id_icon');
+            };
+            if ($('#icon-preview-img').length == 0) {
+                get_icon_input_element().after('<span id="icon-preview-label" class="control-label">Preview</span><br>' +
+                        '<img id="icon-preview-img" src="' + get_icon_input_element().val() + '" style="width:100px; height:100px">');
+            }
+            get_icon_input_element().keyup(function() {
+                $('#icon-preview-img').attr('src', $('#id_icon').val());
+            })
         })
     </script>
 {% endblock %}
