--- a/hs_tools_resource/templates/pages/toolresource.html
+++ b/hs_tools_resource/templates/pages/toolresource.html
@@ -1,5 +1,6 @@
 {% extends "pages/genericresource.html" %}
 {% load geoanalytics_tags pages_tags mezzanine_tags crispy_forms_tags %}
+{% load staticfiles  %}
 
 {#{% block tools %}#}
 {#{% endblock %}#}
@@ -60,27 +61,5 @@
 
 {% block extra_js %}
     {{ block.super }}
-    <div id="checked_res_div" hidden="true">{{ checked_res }}</div>
-    {# put resource specific js below #}
-    <script type="text/javascript">
-        $(document).ready(function(){
-            var checked_res_str=$("#checked_res_div").text();
-            var checked_res_array=checked_res_str.split(",");
-            for (var i = 0; i < checked_res_array.length; i++)
-            {
-                var checked_res_item=checked_res_array[i];
-                $("input[value='"+checked_res_item+"']").attr("checked","true");
-            }
-            var get_icon_input_element = function(){
-                return $('#id_icon');
-            };
-            if ($('#icon-preview-img').length == 0) {
-                get_icon_input_element().after('<span id="icon-preview-label" class="control-label">Preview</span><br>' +
-                        '<img id="icon-preview-img" src="' + get_icon_input_element().val() + '" style="width:100px; height:100px">');
-            }
-            get_icon_input_element().keyup(function() {
-                $('#icon-preview-img').attr('src', $('#id_icon').val());
-            })
-        })
-    </script>
+    <script src="{% static "js/toolresource.js"%}"></script>
 {% endblock %}
