--- a/theme/static/css/hydroshare_core.css
+++ b/theme/static/css/hydroshare_core.css
@@ -2939,19 +2939,27 @@ h4.title {
      background-color: initial;
 }
 
+span.carousel-control-icon {
+	font-size: 24px;
+}
+
+.carousel-indicators .active .carousel-control-block {
+	color: #7189AD;
+}
+
 .carousel-controls {
 	text-align: center;
 	list-style: none;
 	padding: 50px;
 }
 
-
 .carousel-control-block {
 	display: inline-block;
+	margin: 0 15px;
 	margin-bottom: 25px;
 	cursor: pointer;
-	color: #555;
-	margin: 0 15px;
+	color: #808080;
+
 }
 
 .carousel-control-block::after {
@@ -2964,12 +2972,6 @@ h4.title {
 
 .carousel-control-block:last-child::after {
 	height: 0;
-}
-
-span.carousel-control-icon {
-	font-size: 24px;
-	color: #7189AD;
-	text-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
 }
 
 .carousel-inner > .item {
@@ -3098,4 +3100,17 @@ span.carousel-control-icon {
 	margin: 0;
 	margin-top: 5px;
 	cursor: default;
+}
+
+.come-in {
+  transform: translateY(150px);
+  animation: come-in 0.8s ease forwards;
+}
+
+.come-in:nth-child(odd) {
+  animation-duration: 0.6s; /* So they look staggered */
+}
+
+@keyframes come-in {
+  to { transform: translateY(0); }
 }
