--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -109,21 +109,24 @@
                             {% endif %}
                             <ul class="dropdown-menu arrow_box">
                                 <li class="account">
-                                    {% if request.user.userprofile.picture and request.user.userprofile.picture.url %}
-                                        <div style="background-image: url('{{ request.user.userprofile.picture.url }}');"
-                                             class="round-image dropdown-profile-pic-thumbnail pull-left">
+                                    <div class="row">
+                                        <div class="col-sm-4">
+                                            {% if request.user.userprofile.picture and request.user.userprofile.picture.url %}
+                                                <div style="background-image: url('{{ request.user.userprofile.picture.url }}');"
+                                                     class="round-image dropdown-profile-pic-thumbnail pull-left">
+                                                </div>
+                                            {% else %}
+                                                <div class="dropdown-profile-pic-thumbnail round-image dropdown-user-icon pull-left"></div>
+                                            {% endif %}
                                         </div>
-                                    {% else %}
-                                        <div class="dropdown-profile-pic-thumbnail round-image dropdown-user-icon pull-left"></div>
-                                    {% endif %}
-
-                                    <div>
-                                        <strong>{{ request.user }}</strong>
+                                        <div class="col-sm-8">
+                                            <div><strong>{{ request.user }}</strong></div>
+                                            {% if request.user.email %}
+                                                <div class="text-muted">{{ request.user.email }}</div>
+                                            {% endif %}
+                                        </div>
                                     </div>
 
-                                    {% if request.user.email %}
-                                        <div class="text-muted">{{ request.user.email }}</div>
-                                    {% endif %}
 
                                     <div class="dropdown-footer">
                                         <a href="/user/{{ user.id }}/" class="btn btn-primary">Profile</a>
