--- a/theme/templates/pages/homepage.html
+++ b/theme/templates/pages/homepage.html
@@ -41,7 +41,7 @@
             </div>
         </div>
 
-        <ol class="carousel-controls carousel-indicators">
+        <ol class="carousel-controls carousel-indicators slideInBlock">
             <li data-target="#home-page-carousel" data-slide-to="0" class="active">
                 <div class="carousel-control-block">
                     <span class="carousel-control-icon glyphicon glyphicon-share "></span>
@@ -75,7 +75,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 col-sm-6">
+            <div class="col-xs-12 col-sm-6 slideInBlock">
                 <h2>What you can do with HydroShare</h2>
                 <ul class="list-features">
                     <li>
@@ -102,7 +102,7 @@
                         <span>Publication of data and models with a DOI</span></li>
                 </ul>
             </div>
-            <div class="col-xs-12- col-sm-6">
+            <div class="col-xs-12- col-sm-6 slideInBlock">
                 <img class="img-home-art img-responsive" src="{{ STATIC_URL }}img/research.png" alt="Research art image">
             </div>
         </div>
@@ -117,14 +117,14 @@
                     <img class="img-home-art img-responsive" src="{{ STATIC_URL }}img/da_devices.png"
                          alt="Screen sizes">
                 </div>
-                <div class="col-xs-12 col-sm-6">
+                <div class="col-xs-12 col-sm-6 slideInBlock">
                     <h2>Available in all your devices</h2>
                 </div>
             </div>
         </div>
     </div>
 
-    <div class="container">
+    <div class="container slideInBlock">
         <div class="row">
             <div class="col-xs-12">
                 <img class="img-home-art img-responsive" src="{{ STATIC_URL }}img/logo-only.png" alt="HydroShare logo">
@@ -171,6 +171,20 @@
         return [scrOfX, scrOfY];
     }
 
+    $.fn.visible = function (partial) {
+        var $t = $(this),
+                $w = $(window),
+                viewTop = $w.scrollTop(),
+                viewBottom = viewTop + $w.height(),
+                _top = $t.offset().top,
+                _bottom = _top + $t.height(),
+                compareTop = partial === true ? _bottom : _top,
+                compareBottom = partial === true ? _top : _bottom;
+
+        return ((compareBottom <= viewBottom) && (compareTop >= viewTop));
+
+    };
+
     $(document).ready(function () {
         window.onscroll = fadeNav;
         fadeNav();
@@ -178,6 +192,35 @@
         // Prevents dropdown form getting dismissed when clicking on items inside
         $('.dropdown-menu').click(function (e) {
             e.stopPropagation();
+        });
+
+        $(".slideInBlock").each(function (i, el) {
+            var el = $(el);
+            if (el.visible(true)) {
+                el.addClass("come-in");
+            }
+        });
+
+        var win = $(window);
+        var allMods = $(".slideInBlock");
+
+// Already visible modules
+        allMods.each(function (i, el) {
+            var el = $(el);
+            if (el.visible(true)) {
+                el.addClass("already-visible");
+            }
+        });
+
+        win.scroll(function (event) {
+
+            allMods.each(function (i, el) {
+                var el = $(el);
+                if (el.visible(true)) {
+                    el.addClass("come-in");
+                }
+            });
+
         });
     });
 </script>
