--- a/hs_core/templates/pages/my-resources.html
+++ b/hs_core/templates/pages/my-resources.html
@@ -155,6 +155,7 @@
                     <th>Permission Level</th>
                     <th>Labels</th>
                     <th>Favorite</th>
+                    <th>Last modified (for sorting)</th>
                 </tr>
                 </thead>
                 <tbody>
@@ -267,6 +268,7 @@
                                     Favorite
                                 {% endif %}
                             </td>
+                        <td>{{ res.updated|date:"Y/m/d" }}</td>
                         </tr>
                     {% endfor %}
 
@@ -404,6 +406,7 @@
             7 - Permission Level
             8 - Labels
             9 - Favorite
+            10 - Last modified (sortable format)
         ==================================================*/
 
             resourceTable = $("#item-selectors").DataTable({
@@ -420,6 +423,10 @@
                         "orderable": false,
                         "searchable": false,
                         "width": "90px"
+                    },
+                    {
+                        "targets": [4],     // Last modified
+                        "iDataSort": 10
                     },
                     {
                         "targets": [5],     // Subject
@@ -443,6 +450,11 @@
                     },
                     {
                         "targets": [9],     // Favorite
+                        "visible": false,
+                        "searchable": true
+                    },
+                    {
+                        "targets": [10],     // Last modified (for sorting)
                         "visible": false,
                         "searchable": true
                     }
@@ -1002,6 +1014,7 @@
             7 - Permission Level
             8 - Labels
             9 - Favorite
+            10 - Last modified (sortable format)
         ==================================================*/
 
         /* Custom filtering function which will search data for the values in the custom filter dropdown or query strings */
