--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -21,6 +21,12 @@
                       <strong>Validation Error: {{ validation_error }}</strong>
                  </div>
             {%  endif %}
+            {% if new_version_resource_creation_error %}
+                <div class="alert alert-danger alert-dismissible" role="alert">
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <strong>Failed to Create a New Version Resource: {{ new_version_resource_creation_error }}</strong>
+                </div>
+            {% endif %}
         {% endblock %}
 
         {# ======= Missing fields notification =======#}
