--- a/ref_ts/templates/pages/reftimeseriesresource.html
+++ b/ref_ts/templates/pages/reftimeseriesresource.html
@@ -2,20 +2,15 @@
 {% extends "pages/genericresource.html" %}
 {#{% load geoanalytics_tags pages_tags mezzanine_tags crispy_forms_tags %}#}
 
-{% block download_list %}
+{% block download_bag %}
 
-<div>
-    <h3>Content</h3>
-    <div class="custom-well">
       <a id="btn-download-all" type="button" class="btn btn-default" href="{{ download_files_url }}">
         <span class="glyphicon glyphicon-download-alt">
           <span title='Download HIS Time Series Data' class="button-label">Download HIS Time Series Data</span>
         </span>
      </a>
-    </div>
-</div>
+{% endblock download_bag %}
 
-{% endblock download_list %}
 {% block extended_metadata %}
     {% if extended_metadata_exists %}
         <div class="row">
@@ -36,68 +31,84 @@
                     {%  endif %}
                 </div>
                 <div>
-                    {% if site %}
+                    {% if site and site.code or site and site.name or site and site.net_work %}
                         <h4><strong>Site:</strong></h4>
                         <hr style="margin-top: 0px;margin-bottom: 2px">
+                        {% if site.code %}
                         <div class="row">
                             <div class="col-sm-4"><strong>Code:</strong></div>
                             <div class="col-sm-8">{{ site.code }}</div>
                         </div>
+                        {%  endif %}
+                        {% if site.name %}
                         <div class="row">
                             <div class="col-sm-4"><strong>Name:</strong></div>
                             <div class="col-sm-8">{{ site.name }}</div>
                         </div>
+                        {%  endif %}
+                        {% if site.net_work %}
                         <div class="row">
                             <div class="col-sm-4"><strong>Network:</strong></div>
                             <div class="col-sm-8">{{ site.net_work }}</div>
                         </div>
+                        {%  endif %}
                     <hr style="border:0">
                     {%  endif %}
                 </div>
                 <div>
-                    {% if variable %}
+                    {% if variable and variable.code or variable and variable.name %}
                         <h4><strong>Variable:</strong></h4>
                         <hr style="margin-top: 0px;margin-bottom: 2px">
+                        {% if variable.code %}
                         <div class="row">
                             <div class="col-sm-4"><strong>Code:</strong></div>
                             <div class="col-sm-8">{{ variable.code }}</div>
                         </div>
+                        {% endif %}
+                        {% if variable.name %}
                         <div class="row">
                             <div class="col-sm-4"><strong>Name:</strong></div>
                             <div class="col-sm-8">{{ variable.name }}</div>
                         </div>
                         {% endif %}
+                    {% endif %}
                     <hr style="border:0">
                 </div>
                 <div>
-                    {% if method %}
+                    {% if method and method.code or method and method.description %}
                         <h4><strong>Method:</strong></h4>
                         <hr style="margin-top: 0px;margin-bottom: 2px">
+                        {% if method.code  %}
                         <div class="row">
                             <div class="col-sm-4"><strong>Code:</strong></div>
                             <div class="col-sm-8">{{ method.code }}</div>
                         </div>
+                        {% endif %}
+                        {% if method.description  %}
                         <div class="row">
                             <div class="col-sm-4"><strong>Description:</strong></div>
                             <div class="col-sm-8">{{ method.description }}</div>
                         </div>
+                        {% endif %}
                     <hr style="border:0">
                     {% endif %}
                 </div>
                 <div>
-                    {% if quality_level %}
+                    {% if quality_level and quality_level.code and quality_level and quality_level.definition %}
                         <h4><strong>Quality Control Level:</strong></h4>
                         <hr style="margin-top: 0px;margin-bottom: 2px">
+                        {% if quality_level.code %}
                         <div class="row">
                             <div class="col-sm-4"><strong>Code:</strong></div>
                             <div class="col-sm-8">{{ quality_level.code }}</div>
                         </div>
-                       {% if quality_level.definition %}
+                        {% endif %}
+                        {% if quality_level.definition %}
                         <div class="row">
                             <div class="col-sm-4"><strong>Definition:</strong></div>
                             <div class="col-sm-8">{{ quality_level.definition }}</div>
                         </div>
-                    {% endif %}
+                        {% endif %}
                     {% endif %}
                 </div>
             </div>
