--- a/theme/templates/pages/homepage.html
+++ b/theme/templates/pages/homepage.html
@@ -16,7 +16,8 @@
                 <div class="gray-screen"></div>
                 <div class="item-caption">
                     <h1><strong>Share your data and models with colleagues</strong></h1>
-                    <h4>Share, access, visualize and manipulate a broad set of hydrologic data types. Manage who has access to the content that you share.</h4>
+                    <h4>Share, access, visualize and manipulate a broad set of hydrologic data types. Manage who has
+                        access to the content that you share.</h4>
                 </div>
                 <img class="img-responsive" src="{{ STATIC_URL }}img/carousel/carousel1.jpg" alt="Image 1">
             </div>
@@ -73,157 +74,199 @@
         </a>
     </div>
 
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-12 col-sm-6 slideInBlock">
-                <h2>What you can do with HydroShare</h2>
-                <ul class="list-features">
-                    <li>
-                        <div class="glyphicon glyphicon-ok checkmark"></div>
-                        <span>Share your data and models with colleagues</span></li>
-                    <li>
-                        <div class="glyphicon glyphicon-ok checkmark"></div>
-                        <span>Manage who has access to the content that you share</span></li>
-                    <li>
-                        <div class="glyphicon glyphicon-ok checkmark"></div>
-                        <span>Share, access, visualize and manipulate a broad set of hydrologic data types</span></li>
-                    <li>
-                        <div class="glyphicon glyphicon-ok checkmark"></div>
-                        <span>Sharing and execution of models</span></li>
-                    <li>
-                        <div class="glyphicon glyphicon-ok checkmark"></div>
-                        <span>Web services API to facilitate automated and client access to almost all functionality</span>
-                    </li>
-                    <li>
-                        <div class="glyphicon glyphicon-ok checkmark"></div>
-                        <span>Access to high performance computing</span></li>
-                    <li>
-                        <div class="glyphicon glyphicon-ok checkmark"></div>
-                        <span>Publication of data and models with a DOI</span></li>
-                </ul>
-            </div>
-            <div class="col-xs-12- col-sm-6 slideInBlock">
-                <img class="img-home-art img-responsive" src="{{ STATIC_URL }}img/research.png" alt="Research art image">
-            </div>
-        </div>
-    </div>
-
-    <div class="screen-sizes">
+    <div>
         <div class="container">
             <div class="row">
-                <div class="col-xs-12 col-sm-6">
-{#                    Image credit: Android Design. Used under Creative Commons license.#}
-{#                    http://developer.android.com/design/style/devices-displays.html#}
-                    <img class="img-home-art img-responsive" src="{{ STATIC_URL }}img/da_devices.png"
-                         alt="Screen sizes">
-                </div>
                 <div class="col-xs-12 col-sm-6 slideInBlock">
-                    <h2>Available in all your devices</h2>
+                    <h2>What you can do with HydroShare</h2>
+                    <ul class="list-features">
+                        <li>
+                            <div class="glyphicon glyphicon-ok checkmark"></div>
+                            <span>Share your data and models with colleagues</span></li>
+                        <li>
+                            <div class="glyphicon glyphicon-ok checkmark"></div>
+                            <span>Manage who has access to the content that you share</span></li>
+                        <li>
+                            <div class="glyphicon glyphicon-ok checkmark"></div>
+                            <span>Share, access, visualize and manipulate a broad set of hydrologic data types</span>
+                        </li>
+                        <li>
+                            <div class="glyphicon glyphicon-ok checkmark"></div>
+                            <span>Sharing and execution of models</span></li>
+                        <li>
+                            <div class="glyphicon glyphicon-ok checkmark"></div>
+                            <span>Web services API to facilitate automated and client access to almost all functionality</span>
+                        </li>
+                        <li>
+                            <div class="glyphicon glyphicon-ok checkmark"></div>
+                            <span>Access to high performance computing</span></li>
+                        <li>
+                            <div class="glyphicon glyphicon-ok checkmark"></div>
+                            <span>Publication of data and models with a DOI</span></li>
+                    </ul>
+                </div>
+                <div class="col-xs-12- col-sm-6 slideInBlock">
+                    <img class="img-home-art img-responsive" src="{{ STATIC_URL }}img/research.png"
+                         alt="Research art image">
                 </div>
             </div>
         </div>
-    </div>
 
-    <div class="container slideInBlock">
-        <div class="row">
-            <div class="col-xs-12">
-                <img class="img-home-art img-responsive" src="{{ STATIC_URL }}img/logo-only.png" alt="HydroShare logo">
-                <center><strong><h3>Join the community to start sharing</h3></strong></center>
-                <center>
-                    <span>HydroShare is an online collaboration environment for sharing data, models, and code.</span>
-                </center>
-                <center><a class="btn btn-primary btn-signup" href="#">Sign up now</a></center>
+        <div class="container slideInBlock" style="margin-bottom:80px; margin-top:40px">
+            <h2>How it works</h2>
+            <div class="row">
+                <div class="steps-container">
+                    <div class="col-xs-12 col-sm-3 step-wrapper">
+                        <div class="step-item active">
+                            <div class="ste-number">1</div>
+                            <span class="carousel-control-icon glyphicon glyphicon-plus"></span>
+                            <h4>Create data</h4>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-sm-3 step-wrapper">
+                        <div class="step-item">
+                            <div class="ste-number">2</div>
+                            <span class="carousel-control-icon glyphicon glyphicon-upload"></span>
+                            <h4>Upload to HydroShare</h4>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-sm-3 step-wrapper">
+                        <div class="step-item">
+                            <div class="ste-number">3</div>
+                            <span class="carousel-control-icon glyphicon glyphicon-pencil"></span>
+                            <h4>Describe with metadata</h4>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-sm-3 step-wrapper">
+                        <div class="step-item">
+                            <div class="ste-number">4</div>
+                            <span class="carousel-control-icon glyphicon glyphicon-share"></span>
+                            <h4>Share with colleagues</h4>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+        <div class="screen-sizes">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xs-12 col-sm-6">
+                        {#                    Image credit: Android Design. Used under Creative Commons license.#}
+                        {#                    http://developer.android.com/design/style/devices-displays.html#}
+                        <img class="img-home-art img-responsive" src="{{ STATIC_URL }}img/da_devices.png"
+                             alt="Screen sizes">
+                    </div>
+                    <div class="col-xs-12 col-sm-6">
+                        <h2>Available in all your devices</h2>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="container slideInBlock">
+            <div class="row">
+                <div class="col-xs-12">
+                    <img class="img-home-art img-responsive" src="{{ STATIC_URL }}img/logo-only.png"
+                         alt="HydroShare logo">
+                    <center><strong><h3>Join the community to start sharing</h3></strong></center>
+                    <center>
+                        <span>HydroShare is an online collaboration environment for sharing data, models, and code.</span>
+                    </center>
+                    <center><a class="btn btn-primary btn-signup" href="#">Sign up now</a></center>
+                </div>
             </div>
         </div>
     </div>
 
     <script>
-    // Fade nav bar background when scroll is at the top
-    function fadeNav() {
-        var offset = getScrollXY();
-        if (offset[1] > 0) {
-            $("#hs-nav-bar").css("background-color", "rgb(0, 45, 62)");
-            $("#hs-nav-bar").css("border-color", "");
-        }
-        else {
-            $("#hs-nav-bar").css("background-color", "rgba(0, 0, 0, 0.58)");
-            $("#hs-nav-bar").css("border-color", "rgba(0, 0, 0, 0)");
-        }
-    }
-
-    function getScrollXY() {
-        var scrOfX = 0, scrOfY = 0;
-        if (typeof( window.pageYOffset ) == 'number') {
-            //Netscape compliant
-            scrOfY = window.pageYOffset;
-            scrOfX = window.pageXOffset;
-        } else if (document.body && ( document.body.scrollLeft || document.body.scrollTop )) {
-            //DOM compliant
-            scrOfY = document.body.scrollTop;
-            scrOfX = document.body.scrollLeft;
-        } else if (document.documentElement && ( document.documentElement.scrollLeft ||
-                document.documentElement.scrollTop )) {
-            //IE6 standards compliant mode
-            scrOfY = document.documentElement.scrollTop;
-            scrOfX = document.documentElement.scrollLeft;
-        }
-
-        return [scrOfX, scrOfY];
-    }
-
-    $.fn.visible = function (partial) {
-        var $t = $(this),
-                $w = $(window),
-                viewTop = $w.scrollTop(),
-                viewBottom = viewTop + $w.height(),
-                _top = $t.offset().top,
-                _bottom = _top + $t.height(),
-                compareTop = partial === true ? _bottom : _top,
-                compareBottom = partial === true ? _top : _bottom;
-
-        return ((compareBottom <= viewBottom) && (compareTop >= viewTop));
-
-    };
-
-    $(document).ready(function () {
-        window.onscroll = fadeNav;
-        fadeNav();
-
-        // Prevents dropdown form getting dismissed when clicking on items inside
-        $('.dropdown-menu').click(function (e) {
-            e.stopPropagation();
-        });
-
-        $(".slideInBlock").each(function (i, el) {
-            var el = $(el);
-            if (el.visible(true)) {
-                el.addClass("come-in");
+        // Fade nav bar background when scroll is at the top
+        function fadeNav() {
+            var offset = getScrollXY();
+            if (offset[1] > 0) {
+                $("#hs-nav-bar").css("background-color", "rgb(0, 45, 62)");
+                $("#hs-nav-bar").css("border-color", "");
             }
-        });
-
-        var win = $(window);
-        var allMods = $(".slideInBlock");
-
-// Already visible modules
-        allMods.each(function (i, el) {
-            var el = $(el);
-            if (el.visible(true)) {
-                el.addClass("already-visible");
+            else {
+                $("#hs-nav-bar").css("background-color", "rgba(0, 0, 0, 0.58)");
+                $("#hs-nav-bar").css("border-color", "rgba(0, 0, 0, 0)");
             }
-        });
+        }
 
-        win.scroll(function (event) {
+        function getScrollXY() {
+            var scrOfX = 0, scrOfY = 0;
+            if (typeof( window.pageYOffset ) == 'number') {
+                //Netscape compliant
+                scrOfY = window.pageYOffset;
+                scrOfX = window.pageXOffset;
+            } else if (document.body && ( document.body.scrollLeft || document.body.scrollTop )) {
+                //DOM compliant
+                scrOfY = document.body.scrollTop;
+                scrOfX = document.body.scrollLeft;
+            } else if (document.documentElement && ( document.documentElement.scrollLeft ||
+                    document.documentElement.scrollTop )) {
+                //IE6 standards compliant mode
+                scrOfY = document.documentElement.scrollTop;
+                scrOfX = document.documentElement.scrollLeft;
+            }
 
-            allMods.each(function (i, el) {
+            return [scrOfX, scrOfY];
+        }
+
+        $.fn.visible = function (partial) {
+            var $t = $(this),
+                    $w = $(window),
+                    viewTop = $w.scrollTop(),
+                    viewBottom = viewTop + $w.height(),
+                    _top = $t.offset().top,
+                    _bottom = _top + $t.height(),
+                    compareTop = partial === true ? _bottom : _top,
+                    compareBottom = partial === true ? _top : _bottom;
+
+            return ((compareBottom <= viewBottom) && (compareTop >= viewTop));
+
+        };
+
+        $(document).ready(function () {
+            window.onscroll = fadeNav;
+            fadeNav();
+
+            // Prevents dropdown form getting dismissed when clicking on items inside
+            $('.dropdown-menu').click(function (e) {
+                e.stopPropagation();
+            });
+
+            $(".slideInBlock").each(function (i, el) {
                 var el = $(el);
                 if (el.visible(true)) {
                     el.addClass("come-in");
                 }
             });
 
+            var win = $(window);
+            var allMods = $(".slideInBlock");
+
+// Already visible modules
+            allMods.each(function (i, el) {
+                var el = $(el);
+                if (el.visible(true)) {
+                    el.addClass("already-visible");
+                }
+            });
+
+            win.scroll(function (event) {
+
+                allMods.each(function (i, el) {
+                    var el = $(el);
+                    if (el.visible(true)) {
+                        el.addClass("come-in");
+                    }
+                });
+
+            });
         });
-    });
-</script>
+    </script>
 
 
 {% endblock %}
