Content is now hidden for web app resource types. Minor layout error fix.

--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -830,14 +830,13 @@
 
         {#        ======= Content =======#}
 
+        {% if cm.resource_type != "ToolResource" %}
         <div class="col-sm-12 content-block">
             <h3>Content</h3>
 
-            {% if show_content_files  %}
+            {% if show_content_files %}
                 <div class="custom-well">
-                {#            {% block extra_content %}#}
-                {#            {% endblock %}#}
-                {% if cm.files.all %}
+                    {% if cm.files.all %}
                     <div class="table-container">
                         <table class="table-plain table-striped">
                             {% for f in cm.files.all %}
@@ -909,45 +908,47 @@
                             {% endfor %}
                         </table>
                     </div>
-                {% endif %}
-                <!-- Buttons -->
-                {% for b in cm.bags.all %}
-                    <a id="btn-download-all" type="button" class="btn btn-default" href="{{ bag_url }}">
-                        <span class="glyphicon glyphicon-download-alt">
-                            <span title='Download All Content as Zipped BagIt Archive' class="button-label">Download All Content as Zipped BagIt Archive</span>
-                        </span>
-                    </a>
-                {% endfor %}
-
-                {% if page.perms.change and metadata_form %}
-                    <a id="btn-add-file" type="button" class="btn btn-success" data-toggle="modal"
-                       data-target="#add-file-dialog"
-                       multiple="multiple">
-                        <span class="glyphicon glyphicon-plus"><span class="button-label"> Add file...</span></span>
-                    </a>
-                    <br>
-                    <span>If you want to add files from an iRODS server into HydroShare, please do so by logging into the iRODS server
-                    <a id="btn-signin-irods" type="button" class="btn-link" data-toggle="modal" data-target="#irodsSignin">here.</a></span>
-                    <span id="sign-in-info"></span>
-                    <a id="btn-select-irods-file"  type="button" class="btn btn-success" data-toggle="modal" data-target="#irodsContent" style="display:none;">
-                        <span class="glyphicon glyphicon-plus"><span class="button-label">Add file from iRODS...</span></span>
-                    </a>
-                    {% if file_type_error %}
-                      <div class="alert alert-danger alert-dismissible" role="alert">
-                        <button id="validation-error-close" type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                        <strong>Uploaded File Type Validation Error: {{ file_type_error }}</strong>
-                      </div>
                     {% endif %}
-                {% endif %}
+                    <!-- Buttons -->
+                    {% for b in cm.bags.all %}
+                        <a id="btn-download-all" type="button" class="btn btn-default" href="{{ bag_url }}">
+                            <span class="glyphicon glyphicon-download-alt">
+                                <span title='Download All Content as Zipped BagIt Archive' class="button-label">Download All Content as Zipped BagIt Archive</span>
+                            </span>
+                        </a>
+                    {% endfor %}
 
-                <div class="col-lg-12">
-                    <a target="_blank" href="http://en.wikipedia.org/wiki/BagIt">Learn more about the Bagit archive format</a>
-                </div>
-            {% else %}
-                <i class="glyphicon glyphicon-eye-close text-danger no-access-icon"></i>&nbsp;
-                <span>You do not have permission to see these content files. Please contact the Authors if you wish to obtain access.</span>
-            {% endif %}
+                    {% if page.perms.change and metadata_form %}
+                        <a id="btn-add-file" type="button" class="btn btn-success" data-toggle="modal"
+                           data-target="#add-file-dialog"
+                           multiple="multiple">
+                            <span class="glyphicon glyphicon-plus"><span class="button-label"> Add file...</span></span>
+                        </a>
+                        <br>
+                        <span>If you want to add files from an iRODS server into HydroShare, please do so by logging into the iRODS server
+                        <a id="btn-signin-irods" type="button" class="btn-link" data-toggle="modal" data-target="#irodsSignin">here.</a></span>
+                        <span id="sign-in-info"></span>
+                        <a id="btn-select-irods-file"  type="button" class="btn btn-success" data-toggle="modal" data-target="#irodsContent" style="display:none;">
+                            <span class="glyphicon glyphicon-plus"><span class="button-label">Add file from iRODS...</span></span>
+                        </a>
+                        {% if file_type_error %}
+                          <div class="alert alert-danger alert-dismissible" role="alert">
+                            <button id="validation-error-close" type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                            <strong>Uploaded File Type Validation Error: {{ file_type_error }}</strong>
+                          </div>
+                        {% endif %}
+                    {% endif %}
+
+                    <div class="col-lg-12">
+                        <a target="_blank" href="http://en.wikipedia.org/wiki/BagIt">Learn more about the Bagit archive format</a>
+                    </div>
+                {% else %}
+                    <i class="glyphicon glyphicon-eye-close text-danger no-access-icon"></i>&nbsp;
+                    <span>You do not have permission to see these content files. Please contact the Authors if you wish to obtain access.</span>
+                {% endif %}
+            </div>
         </div>
+        {% endif %}
 
         <div class="col-sm-12">
             <!-- === Tabs begin === -->
